@@ -1,8 +1,6 @@
 
 *coding:)
 
-test/debug cr_statement_at_page_rule_parse_from_buf().
-
 Provide support for font selection. (hard, started well underway.)
  First make sure to be able to gather all the font related property
   values.
