@@ -1,3 +1,11 @@
+2003-06-18  dodji  <dodji@seketeli.org>
+
+	* tests/test4-main.c: fixed a small typo in the "@page" rule
+	embedded in gv_at_page_buf.
+	
+	* src/parser/cr-parser.c: fixed a small bug in the
+	cr_parser_parse_page () function.
+
 2003-06-17  dodji  <dodji@seketeli.org>
 
 	* tests/test4-main.c: added test_cr_statement_at_page_rule_parse ()
